Fixiing one small issue of spacing in the Featured Artworks

--- a/styles.css
+++ b/styles.css
@@ -250,7 +250,7 @@ body {
     text-align: center;
     font-size: 2.5rem;
     color: #004B49;
-    margin-bottom: 50px;
+    margin-bottom: 0px;
     padding: 0 20px;
     /* Add padding for mobile */
     word-wrap: break-word;
@@ -659,8 +659,8 @@ footer-text-2 p:hover {
         display: flex;
         align-items: center;
         justify-content: center;
-        margin: 2rem 0;
         gap: 1rem;
+        width: 100%;
     }
 
     .section-title {
